Fix all themes to fit the new UX <http://earthli.com/projects/view_job.php?id=2122>

--- a/site/resources/styles/core/core-mixins.less
+++ b/site/resources/styles/core/core-mixins.less
@@ -1,12 +1,12 @@
-@body_color: gray;
+@background_color: gray;
 
-.engraved_border(@depth: 1px, @highlight_color: lighten(@body_color, 30%), @shadow_color: darken(@body_color, 10%))
+.engraved_border(@depth: 1px, @highlight_color: lighten(@background_color, 30%), @shadow_color: darken(@background_color, 10%))
 {
   border: @depth solid;
   border-color: @shadow_color @highlight_color @highlight_color @shadow_color;
 }
 
-.extruded_border(@depth: 1px, @highlight_color: lighten(@body_color, 30%), @shadow_color: darken(@body_color, 10%))
+.extruded_border(@depth: 1px, @highlight_color: lighten(@background_color, 30%), @shadow_color: darken(@background_color, 10%))
 {
   border: @depth solid;
   border-color: @highlight_color @shadow_color @shadow_color @highlight_color;
