--- a/site/resources/themes/midnight.less
+++ b/site/resources/themes/midnight.less
@@ -30,6 +30,7 @@ http://www.earthli.com/software/webcore
 @background_color: black;
 @text_color: white;
 @title_color: #79cc36;
+@banner_title_color: @text_color;
 @h1_color: #ffc31c;
 @h3_color: #ffc31c;
 @link_color: #05aae5;
@@ -37,8 +38,3 @@ http://www.earthli.com/software/webcore
 @code_text_color: #7d9cd1;
 @highlighted_text_color: #c8abff;
 @selected_text_color: @title_color;
-
-.banner-title
-{
-  color: @text_color;
-}
