--- a/site/resources/themes/theme-base.less
+++ b/site/resources/themes/theme-base.less
@@ -114,7 +114,7 @@ table.columns > tbody > tr > td,
 table.columns > tbody > tr > th,
 .abstract
 {
-  border-color: @bright_border;
+  border-color: @standard_border;
 }
 
 .quote-block,
@@ -124,14 +124,14 @@ pre > code,
 .form-basic-block,
 .pullquote
 {
-  border-color: @stark_border;
+  border-color: @accent_border;
 }
 
 .object-navigator .links
 {
-  column-rule-color: @bright_border;
-  -webkit-column-rule-color: @bright_border;
-  -moz-column-rule-color: @bright_border;
+  column-rule-color: @standard_border;
+  -webkit-column-rule-color: @standard_border;
+  -moz-column-rule-color: @standard_border;
 }
 
 .info-box-top,
@@ -226,7 +226,7 @@ a.button:visited
 
 .button.selected
 {
-  background-color: @control_hover_background_color;
+  background-color: @selected_control_background_color;
   border-color: @control_border_color;
   color: @selected_control_text_color;
 }
@@ -246,13 +246,13 @@ a.button:visited
 
 ul.menu
 {
-  background-color: @control_background_color;
-  border-color: @control_border_color;
+  background-color: @menu_background_color;
+  border-color: @menu_border_color;
 
   .menu-group-title
   {
-    background-color: @accent_background_color;
-    border-color: @control_border_color;
+    background-color: @menu_title_background_color;
+    border-color: @menu_border_color;
   }
 
   .menu-item:hover
