--- a/site/resources/styles/core/core-values.less
+++ b/site/resources/styles/core/core-values.less
@@ -34,16 +34,16 @@
 
 @banner_link_color: @link_color;
 @footer_link_color: @link_color;
-@banner_link_hover_color: @link_hover_color;
-@footer_link_hover_color: @link_hover_color;
+@banner_link_hover_color: saturate(lighten(@banner_link_color, 20%), 20%);
+@footer_link_hover_color: saturate(lighten(@footer_link_color, 20%), 20%);;
 
 @hairline_border_width: 1px;
 @thin_border_width: 3px;
 @thick_border_width: 6px;
 
-@bright_border: mix(@text_color, @background_color, 30%);
-@medium_border: darken(@bright_border, 10%);
-@stark_border: darken(@background_color, 5%);
+@standard_border: mix(@text_color, @background_color, 30%);
+@medium_border: darken(@standard_border, 10%);
+@accent_border: darken(@background_color, 5%);
 
 @code_text_color: @text_color;
 @highlighted_text_color: green;
@@ -51,19 +51,24 @@
 
 @control_text_color: mix(@text_color, @background_color, 75%);
 @control_background_color: darken(@background_color, 6%);
-@control_border_color: @bright_border;
+@control_border_color: @standard_border;
 
 @edit_control_text_color: @control_text_color;
 @edit_control_background_color: @control_background_color;
 
 @selected_control_text_color: @selected_text_color;
+@selected_control_background_color: @control_hover_background_color;
 
 @disabled_control_text_color: @dimmest_text_color;
-@disabled_control_background_color: @stark_border;
-@disabled_control_border_color: @medium_border;
+@disabled_control_background_color: @accent_border;
+@disabled_control_border_color: mix(@dimmer_text_color, @background_color, 30%);
 
 @control_hover_background_color: lighten(@background_color, 3%);
-@control_hover_border_color: @bright_border;
+@control_hover_border_color: @standard_border;
+
+@menu_background_color: @control_background_color;
+@menu_title_background_color: @accent_background_color;
+@menu_border_color: @control_border_color;
 
 @message_box_text_color: #765;
 @message_box_link_color: #66C;
