--- a/site/resources/themes/fog.less
+++ b/site/resources/themes/fog.less
@@ -26,26 +26,11 @@ http://www.earthli.com/software/webcore
 
 @import "theme-base";
 
-@background_color: white;
-
-@text_color: #225;
-
-@banner_background_color: @title_color;
-@footer_background_color: @title_color;
-@banner_text_color: @background_color;
-@footer_text_color: @background_color;
-@banner_link_color: #CC9;
-@footer_link_color: @banner_link_color;
-@banner_link_hover_color: #CF9;
-@footer_link_hover_color: @banner_link_hover_color;
-
-@standard_border: darken(@background_color, 20%);
-
-@title_color: #369;
-@banner_title_color: white;
-
-@link_color: #996;
-@link_hover_color: #9C6;
-
+@background_color: #EEE;
+@banner_background_color: #DDD;
+@footer_background_color: @banner_background_color;
+@text_color: #333;
+@title_color: #666;
+@link_color: #06C;
 @highlighted_text_color: #0A0;
-@selected_text_color: #375daf;
+@selected_text_color: #5088ff;
