--- a/site/resources/themes/halloween.css
+++ b/site/resources/themes/halloween.css
@@ -23,156 +23,195 @@ For more information about the earthli WebCore, visit:
 http://www.earthli.com/software/webcore
 
 ****************************************************************************/
-
-body
-{
+body {
+  background-color: #000000;
+  color: #ffffff;
+}
+a:link,
+a:visited {
+  color: #ff9933;
+}
+a:hover,
+a:active {
+  color: #ffcc99;
+}
+h1 {
+  color: #ff6600;
+}
+h2 {
+  color: #ff6600;
+  border-color: #ff6600;
+}
+h3 {
+  color: #ffbb00;
+}
+h4 {
+  color: #ffbb00;
+}
+.chart-title,
+.preview-title {
+  color: #ff6600;
+}
+.banner {
+  background-color: transparent;
+  color: #ffffff;
+}
+.banner a:link,
+.banner a:visited {
+  color: #ff9933;
+}
+.banner a:hover,
+.banner a:active {
+  color: #ffcc99;
+}
+.banner-title {
+  color: #ff9900;
+}
+.footer {
+  background-color: transparent;
+  color: #ffffff;
+}
+.footer a:link,
+.footer a:visited {
+  color: #ff9933;
+}
+.footer a:hover,
+.footer a:active {
+  color: #ffcc99;
+}
+.nav-box,
+.top-box,
+.footer,
+.horizontal-separator,
+.vertical-separator,
+.left-sidebar,
+.right-sidebar,
+.object-in-list,
+.info-box-top,
+.info-box-bottom,
+.cell-selected,
+.cell-highlight,
+.cell-non-empty,
+.description-box,
+table.columns > tbody > tr > td,
+table.columns > tbody > tr > th,
+.abstract {
+  border-color: #666666;
+}
+.quote-block,
+.preview,
+.chart,
+pre > code,
+.form-basic-block,
+.pullquote {
+  border-color: #999999;
+}
+.object-navigator .links {
+  column-rule-color: #666666;
+  -webkit-column-rule-color: #666666;
+  -moz-column-rule-color: #666666;
+}
+.info-box-top,
+.info-box-bottom,
+.subdued {
+  color: #b3b3b3;
+}
+.info-box-top a:link,
+.info-box-bottom a:link,
+.subdued a:link,
+.info-box-top a:visited,
+.info-box-bottom a:visited,
+.subdued a:visited {
+  color: #ffbf80;
+}
+.info-box-top a:hover,
+.info-box-bottom a:hover,
+.subdued a:hover,
+.info-box-top a:active,
+.info-box-bottom a:active,
+.subdued a:active {
+  color: #ffcc99;
+}
+.cell-highlight {
+  background-color: #1f1f1f;
+}
+.cell-selected {
+  background-color: #141414;
+}
+.caution,
+.warning,
+.error {
+  color: #776655;
+}
+.caution a:link,
+.caution a:visited,
+.warning a:link,
+.warning a:visited,
+.error a:link,
+.error a:visited {
+  color: #6666cc;
+}
+.graph-foreground {
+  background-color: #ff6600;
+}
+.highlight {
+  color: #ffff00;
+}
+.selected {
+  color: #ff6600;
+}
+code {
+  color: #ffffff;
+}
+.quote,
+.quote-inline,
+.quote-block {
+  color: #cccccc;
+}
+.button {
+  background-color: #141414;
+  border-color: #666666;
+  color: #bfbfbf;
+}
+a.button:link,
+a.button:visited {
+  color: #bfbfbf;
+}
+.button.selected {
+  background-color: #262626;
+  border-color: #666666;
+  color: #ff6600;
+}
+.button.disabled {
+  background-color: #0f0f0f;
+  border-color: #3d3d3d;
+  color: #b3b3b3;
+}
+.button:hover:not(.disabled):not(.selected) {
+  background-color: #262626;
+  border-color: #666666;
+}
+ul.menu {
+  background-color: #141414;
+  border-color: #666666;
+}
+ul.menu .menu-group-title {
+  background-color: #1f1f1f;
+  border-color: #666666;
+}
+ul.menu .menu-item:hover {
+  background-color: #262626;
+  border-color: #666666;
+}
+ul.menu .menu-item-description {
+  color: #bfbfbf;
+}
+.text-control,
+.menu-control {
+  background-color: #141414;
+  color: #bfbfbf;
+  border-color: #666666;
+}
+body {
   background: #000000 url(halloween/halloween_bg.jpg) no-repeat fixed center center;
-  color: #FFFFFF;
-}
-
-.banner-title
-{
-  color: #FF9900;
-}
-
-.nav-box
-{
-  border-width: 0px;
-}
-
-.button
-{
-  background-color: transparent;
-  border: 1px solid #666;
-}
-
-.box
-{
-  border-width: 0px;
-}
-
-.chart-title
-{
-  color: #FF9900;
-  border-bottom: 1px solid #666666;
-}
-
-.preview, .preview-title
-{
-  border-width: 0px;
-}
-
-.form-basic, .quote-block
-{
-  border: 1px solid #999999;
-  background: url(halloween/20_percent_black.png);
-}
-
-.menu
-{
-  background-color: transparent;
-  background: url(halloween/60_percent_black.png);
-}
-
-.side-bar, .chart
-{
-  border: 1px #666666 solid;
-}
-
-.cell-non-empty
-{
-  border-color: #999999;
-}
-
-.cell-selected, .cell-highlight
-{
-  border-color: #999999;
-}
-
-.menu-bar-bottom, .menu-bar-top
-{
-  border-width: 0px;
-}
-
-.horizontal-separator, .vertical-separator
-{
-  border-color: #999999;
-}
-
-a:link, a:visited
-{
-  color: #FF9933;
-}
-
-a:hover, a:active
-{
-  color: #FFFF00;
-}
-
-h1
-{
-  color: #FF6600;
-}
-
-h2
-{
-  color: #CCCCCC;
-  border-bottom: 2px solid #CCCCCC;
-}
-
-th
-{
-  border-bottom-color: #FFFFFF;
-}
-
-.disabled
-{
-  color: #999999;
-}
-
-.frame
-{
-  border-color: #666666;
-}
-
-.graph-answer
-{
-  background-color: #444444;
-}
-
-.graph-background
-{
-  background-color: #FF9933;
-}
-
-.highlight
-{
-  color: #FFFF00;
-}
-
-.object-in-list, .info-box-top, .info-box-bottom
-{
-  border-color: #666666;
-}
-
-.quote, .quote-inline, .quote-block
-{
-  color: #CCCCCC;
-}
-
-.required
-{
-  color: #FF6600;
-}
-
-.selected
-{
-  color: #FF6600;
-}
-
-.menu-control, .text-control
-{
-  background: #000000;
-  color: #FF6600;
-  border: 1px solid #666666;
 }
