--- a/site/resources/themes/halloween.less
+++ b/site/resources/themes/halloween.less
@@ -25,27 +25,17 @@ http://www.earthli.com/software/webcore
 ****************************************************************************/
 
 @import "theme-base";
+@import "theme-base-dark";
 
-@background_color: white;
+@background_color: black;
+@text_color: white;
+@title_color: #F60;
+@banner_title_color: #F90;
+@link_color: #F93;
+@highlighted_text_color: #FF0;
+@selected_text_color: @title_color;
 
-@text_color: #225;
-
-@banner_background_color: @title_color;
-@footer_background_color: @title_color;
-@banner_text_color: @background_color;
-@footer_text_color: @background_color;
-@banner_link_color: #CC9;
-@footer_link_color: @banner_link_color;
-@banner_link_hover_color: #CF9;
-@footer_link_hover_color: @banner_link_hover_color;
-
-@standard_border: darken(@background_color, 20%);
-
-@title_color: #369;
-@banner_title_color: white;
-
-@link_color: #996;
-@link_hover_color: #9C6;
-
-@highlighted_text_color: #0A0;
-@selected_text_color: #375daf;
+body
+{
+  background: black url(halloween/halloween_bg.jpg) no-repeat fixed center center;
+}
