--- a/site/resources/themes/midnight.css
+++ b/site/resources/themes/midnight.css
@@ -65,7 +65,7 @@ h4 {
   color: #51d1ff;
 }
 .banner-title {
-  color: #79cc36;
+  color: #ffffff;
 }
 .footer {
   background-color: transparent;
@@ -184,7 +184,7 @@ a.button:visited {
 }
 .button.disabled {
   background-color: #0f0f0f;
-  border-color: #808080;
+  border-color: #3d3d3d;
   color: #b3b3b3;
 }
 .button:hover:not(.disabled):not(.selected) {
@@ -211,7 +211,4 @@ ul.menu .menu-item-description {
   background-color: #141414;
   color: #bfbfbf;
   border-color: #666666;
-}
-.banner-title {
-  color: #ffffff;
 }
