--- a/site/resources/themes/osx.css
+++ b/site/resources/themes/osx.css
@@ -62,7 +62,7 @@ h4 {
 }
 .banner a:hover,
 .banner a:active {
-  color: #0066cc;
+  color: #79c3f9;
 }
 .banner-title {
   color: #222222;
@@ -77,7 +77,7 @@ h4 {
 }
 .footer a:hover,
 .footer a:active {
-  color: #0066cc;
+  color: #79c3f9;
 }
 .nav-box,
 .top-box,
@@ -184,7 +184,7 @@ a.button:visited {
 }
 .button.disabled {
   background-color: #ebebeb;
-  border-color: #9e9e9e;
+  border-color: #cecece;
   color: #989898;
 }
 .button:hover:not(.disabled):not(.selected) {
@@ -235,7 +235,7 @@ body {
   background-image: url(osx/5_percent_black.png);
   background-repeat: repeat;
   border: 1px solid;
-  border-color: #ffffff #676767 #676767 #ffffff;
+  border-color: #ffffff #dfdfdf #dfdfdf #ffffff;
 }
 .form-basic,
 .form-basic-block {
@@ -248,7 +248,7 @@ body {
 .text-control,
 .menu-control {
   border: 1px solid;
-  border-color: #676767 #ffffff #ffffff #676767;
+  border-color: #dfdfdf #ffffff #ffffff #dfdfdf;
 }
 ul.menu {
   opacity: .85;
