--- a/site/resources/themes/theme-base-dark.less
+++ b/site/resources/themes/theme-base-dark.less
@@ -8,9 +8,9 @@
 @link_color: blue;
 @dimmer_link_color: lighten(@link_color, 15%);
 
-@bright_border: lighten(@background_color, 40%);
-@medium_border: lighten(@bright_border, 10%);
-@stark_border: lighten(@bright_border, 20%);
+@standard_border: lighten(@background_color, 40%);
+@medium_border: lighten(@standard_border, 10%);
+@accent_border: lighten(@standard_border, 20%);
 
 @control_background_color: lighten(@background_color, 8%);
 
